--- a/support-us.html
+++ b/support-us.html
@@ -6,6 +6,8 @@
     <title>Discord Translator - Support Us</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Discord Translator - Support Us">
     <meta property="og:description" content="Break down language barriers effortlessly in your Discord server with Discord Translator.">
@@ -107,6 +109,33 @@
         </div>
     </section>
 
+    <section class="text-center" style="padding-top: 120px;">
+        <div class="container">
+            <h2>Donation Options</h2>
+            <form id="donationForm">
+                <label for="amount">Amount:</label>
+                <input type="number" id="amount" name="amount" min="1">
+                
+                <label for="use">Put my donation towards:</label>
+                <select id="use" name="use">
+                    <option value="server">Server Costs</option>
+                    <option value="api">API Costs</option>
+                    <option value="boost">Server Boost</option>
+                    <option value="general">General Maintenance</option>
+                </select>
+
+                <label for="paymentMethod">Payment Method:</label>
+                <select id="paymentMethod" name="paymentMethod">
+                    <option value="paypal">PayPal</option>
+                    <option value="cashapp">CashApp</option>
+                    <option value="bitcoin">Bitcoin</option>
+                </select>
+
+                <button type="submit" class="btn btn-primary">Donate</button>
+            </form>
+        </div>
+    </section>
+    
     <!-- Support Section -->
     <section class="support-section text-center" style="padding-top: 120px;">
         <div class="container">
