--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <h2 class="text-center mb-4">How to Get Started</h2>
             <ol>
                 <li>Click the 'Invite to Discord' button above to add the bot to your server.</li>
-                <li>Use the command <code>!TranslatorBot help</code> to configure language preferences.</li>
+                <li>Use the command <code>!tl help</code> to configure language preferences.</li>
                 <li>Sit back and let Discord Translator do the work. Enjoy seamless conversations!</li>
             </ol>
         </div>
