--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
     function fetchMetrics() {
         $.ajax({
-            url: 'https://5b6d-68-229-28-82.ngrok-free.app/metrics',
+            url: 'https://497c-68-229-28-82.ngrok-free.app/metrics',
             method: 'GET',
             headers: {
                 "ngrok-skip-browser-warning": "69420"
